--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -114,22 +115,75 @@
 			[tabNUMBER]A NUMBER of tabs<br>
 			[cmd]Command line command[/cmd] - Shows a command block using &lt;pre&gt; and &lt;code&gt;<br>
 			[noparse]Place KScript code in here[/noparse] - Prevents KScript from being parsed inside this block<br>
-            [cmt=COMMENT]Write a comment in your code to yourself ;)
+            [cmt=COMMENT]Write a comment in your code to yourself ;)<br>
+            [terminal user=root host=kalebklein.com][command]A command[/command][response]Response to a command[/response][/terminal]<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;If you wish to display a terminal window with cool styling, use this one. :)
 		</div>
 	</div>
 	<hr class="hrclass">
 	<h1>All Tags in Action</h1>
-	<h1>Heading 1</h1><h6>Heading 6</h6><p>My Paragraph</p><strong>Bold Text</strong><br><em>Italic Text</em><br>Image: <img src="http://cdn.kalebklein.com/images/forum_sig.png"><br>Class Image: <img src="http://cdn.kalebklein.com/images/forum_sig.png" class="gallery"><br>Sized Image w/both | 450x90: <img src="http://cdn.kalebklein.com/images/forum_sig.png" width="450" height="90"><br>Sized Image w/ single | 450: <img src="http://cdn.kalebklein.com/images/forum_sig.png" width="450"><br><span style="text-decoration: underline;">Underlined Text</span><br><span style="text-decoration: line-through;">Strike Through Text</span><br><span style="text-decoration: overline;">Overlined Text</span><br>Horizontal Rule: <hr>Horizontal Rule With Style: <hr class="hrclass">Unordered List: <ul><br><li>List Item 1</li><li>List Item 2</li><li>List Item 3</li></ul>Ordered List: <ol><br><li>List Item 1</li><li>List Item 2</li><li>List Item 3</li></ol><span style="font-size: 20px;">20px Sized Text</span><br><span style="color: red">Red Text</span><br><span style="color: #00ff00">Green Text</span><br><div style="text-align: center;">Centered Text</div><br><blockquote>Quote from unknown source. So citation left out</blockquote><blockquote cite="Wikipedia">A quote from a known source. Source cited in code<footer>Quoted: <cite title="Wikipedia">Wikipedia</cite></footer></blockquote><a href="http://www.kalebklein.com">My Website</a> <sup>[www.kalebklein.com]</sup> - Link with URL<br><a href="http://www.google.com" target="_blank">Google</a> <sup>[www.google.com]</sup> - Link with URL that opens in a new tab<br><a href="http://www.facebook.com">http://www.facebook.com</a> - Unnamed URL<br>Word&nbsp;1 space&nbsp;&nbsp;&nbsp;&nbsp;4 spaces<br>Word&nbsp;&nbsp;&nbsp;&nbsp;Single tab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4 tabs<br>Command:<br><pre><code>$ nano /etc/pacman.d/mirrorlist</code></pre><br><br><br>Comment:<br>You can't see it :). It looks like: &#91;cmt=This is a comment&#93;<br><br>No Parse:<br>
+	<h1>Heading 1</h1>
+<h6>Heading 6</h6>
+<p>My Paragraph</p>
+<strong>Bold Text</strong><br>
+<em>Italic Text</em><br>
+Image: <img src="http://cdn.kalebklein.com/images/forum_sig.png"><br>
+Class Image: <img src="http://cdn.kalebklein.com/images/forum_sig.png" class="gallery"><br>
+Sized Image w/both | 450x90: <img src="http://cdn.kalebklein.com/images/forum_sig.png" width="450" height="90"><br>
+Sized Image w/ single | 450: <img src="http://cdn.kalebklein.com/images/forum_sig.png" width="450"><br>
+<span style="text-decoration: underline;">Underlined Text</span><br>
+<span style="text-decoration: line-through;">Strike Through Text</span><br>
+<span style="text-decoration: overline;">Overlined Text</span><br>
+Horizontal Rule: <hr>
+Horizontal Rule With Style: <hr class="hrclass">
+Unordered List: <ul><br>
+<li>List Item 1</li>
+<li>List Item 2</li>
+<li>List Item 3</li></ul>
+Ordered List: <ol><br>
+<li>List Item 1</li>
+<li>List Item 2</li>
+<li>List Item 3</li></ol>
+<span style="font-size: 20px;">20px Sized Text</span><br>
+<span style="color: red">Red Text</span><br>
+<span style="color: #00ff00">Green Text</span><br>
+<div style="text-align: center;">Centered Text</div><br>
+<blockquote>Quote from unknown source. So citation left out</blockquote>
+<blockquote cite="Wikipedia">A quote from a known source. Source cited in code<footer>Quoted: <cite title="Wikipedia">Wikipedia</cite></footer></blockquote>
+<a href="http://www.kalebklein.com">My Website</a> <sup>[www.kalebklein.com]</sup> - Link with URL<br>
+<a href="http://www.google.com" target="_blank">Google</a> <sup>[www.google.com]</sup> - Link with URL that opens in a new tab<br>
+<a href="http://www.facebook.com">http://www.facebook.com</a> - Unnamed URL<br>
+Word&nbsp;1 space&nbsp;&nbsp;&nbsp;&nbsp;4 spaces<br>
+Word&nbsp;&nbsp;&nbsp;&nbsp;Single tab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4 tabs<br>
+Command:<br><pre><code>$ nano /etc/pacman.d/mirrorlist</code></pre><br>
+
+<br><br>Comment:<br>You can't see it :). It looks like: &#91;cmt=This is a comment&#93;<br><br>
+
+No Parse:<br>
     &#91;code=php&#93;this is a code block&#91;/code&#93;&#91;nl&#93;-newline&#91;p&#93;paragraph&#91;/p&#93;
-<br><br><div class='codeBlock codeBlockHeader'>Code Language: C++</div><pre class="cpp codeBlock" style="font-family:monospace;"><ol><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #339900;">#include &lt;iostream&gt;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">&nbsp;</div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #0000ff;">using</span> <span style="color: #0000ff;">namespace</span> std<span style="color: #008080;">;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">&nbsp;</div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #0000ff;">int</span> main<span style="color: #008000;">&#40;</span><span style="color: #008000;">&#41;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #008000;">&#123;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">	<span style="color: #0000dd;">cout</span> <span style="color: #000080;">&lt;&lt;</span> <span style="color: #FF0000;">&quot;Hello World!&quot;</span><span style="color: #008080;">;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">	<span style="color: #0000dd;">cin</span>.<span style="color: #007788;">get</span><span style="color: #008000;">&#40;</span><span style="color: #008000;">&#41;</span><span style="color: #008080;">;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">&nbsp;</div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">	<span style="color: #0000ff;">return</span> <span style="color: #0000dd;">0</span><span style="color: #008080;">;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #008000;">&#125;</span></div></li></ol></pre>Youtube Video: <iframe id="ytvid" class="ytvid" width="640" height="390" frameborder="0" src="http://cdn.kalebklein.com/kparser/loadytvid.php?videoID=g4rYh3e97VU" style="display: block; overflow: hidden; padding: 0;" scrolling="no"><p>Sorry, your browser doesn't support the iFrame element!</p></iframe><br>HTML5 Video:<br><video >
+<br><br>
+
+<div class='codeBlock codeBlockHeader'>Code Language: C++</div><pre class="cpp codeBlock" style="font-family:monospace;"><ol><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #339900;">#include &lt;iostream&gt;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">&nbsp;</div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #0000ff;">using</span> <span style="color: #0000ff;">namespace</span> std<span style="color: #008080;">;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">&nbsp;</div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #0000ff;">int</span> main<span style="color: #008000;">&#40;</span><span style="color: #008000;">&#41;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #008000;">&#123;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">	<span style="color: #0000dd;">cout</span> <span style="color: #000080;">&lt;&lt;</span> \<span style="color: #FF0000;">&quot;Hello World!<span style="color: #000099; font-weight: bold;">\&quot;</span>;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #FF0000;">	cin.get();</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;">&nbsp;</div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #FF0000;">	return 0;</span></div></li><li style="font-weight: normal; vertical-align:top;"><div style="font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;font-family: dejavu, monospace; font-size: 11px;"><span style="color: #FF0000;">}</span></div></li></ol></pre>
+Youtube Video: <iframe id="ytvid" class="ytvid" width="640" height="390" frameborder="0" src="http://cdn.kalebklein.com/kparser/loadytvid.php?videoID=g4rYh3e97VU" style="display: block; overflow: hidden; padding: 0;" scrolling="no"><p>Sorry, your browser doesn't support the iFrame element!</p></iframe><br>
+
+HTML5 Video:<br><video >
 	<source src="http://cdn.kalebklein.com/kparser/video.mp4" type="video/mp4">
-	<p>Your browser does not support HTML5 video</p></video><br>HTML5 Video with controls:<br><video  controls>
+	<p>Your browser does not support HTML5 video</p></video><br>
+
+HTML5 Video with controls:<br><video  controls>
 	<source src="http://cdn.kalebklein.com/kparser/video.mp4" type="video/mp4">
-	<p>Your browser does not support HTML5 video</p></video><br>HTML5 Video with width & height size:<br><video width="500" height="400" controls>
+	<p>Your browser does not support HTML5 video</p></video><br>
+
+HTML5 Video with width & height size:<br><video width="500" height="400" controls>
 	<source src="http://cdn.kalebklein.com/kparser/video.mp4" type="video/mp4">
-	<p>Your browser does not support HTML5 video</p></video><br>HTML5 Video with global size:<br><video width="500"  controls>
+	<p>Your browser does not support HTML5 video</p></video><br>
+
+HTML5 Video with global size:<br><video width="500"  controls>
 	<source src="http://cdn.kalebklein.com/kparser/video.mp4" type="video/mp4">
-	<p>Your browser does not support HTML5 video</p></video><br><hr class="hrclass"><h2>Emoticons</h2>	<table style="text-align: center; border: 1px outset #000">
+	<p>Your browser does not support HTML5 video</p></video><br>
+
+<hr class="hrclass">
+<h2>Emoticons</h2>	<table style="text-align: center; border: 1px outset #000">
 	<tr>
 <th style='border: 1px inset #000;'>
 	:angry:
@@ -250,7 +304,46 @@
 </tr>
 </table>
 <br><br>
-</div>
+	<hr class="hrclass">
+<h2>Terminal</h2>
+Terminal Output:<br>
+<link rel="stylesheet" type"text/css" href="http://cdn.kalebklein.com/extras/css/terminal.css">
+<div class="terminal">
+	<div class="terminal-header">
+		<div class="buttons">
+			<div class="button quit"></div>
+			<div class="button maximize"></div>
+			<div class="button minimize"></div>
+		</div>
+		<div class="title">
+			Terminal: root@kalebklein.com ~
+		</div>
+	</div>
+	<div class="terminal-body">
+		<div class="body-container">
+<div class="command-line">
+				<div class="hostname">
+					[<span class="user">root</span>@<span class="host">kalebklein.com</span> <span class="where">~</span>]: #
+				</div>
+				<div class="command">ls -l</div>
+			</div>
+<div class="command-line">
+				<div class="hostname">
+					[<span class="user">root</span>@<span class="host">kalebklein.com</span> <span class="where">~</span>]: #
+				</div>
+				<div class="command">clear</div>
+			</div>
+<div class="command-line">
+				<div class="hostname">
+					[<span class="user">root</span>@<span class="host">kalebklein.com</span> <span class="where">~</span>]: #
+				</div>
+				<div class="command">which sh</div>
+			</div>
+<div class="command-line">
+				<div class="hostname"></div>
+				<div class="command command-response">/usr/bin/sh</div>
+			</div>
+</div></div></div></div></div>
 <div class="modal fade" id="aboutModal" role="dialog" aria-labeledby="aboutModalLabel">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
