Added newer theme names to supported themes list
Signed-off-by: Kaleb Klein <klein.jae@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -142,19 +141,19 @@ Terminal Output:<br>
 		<div class="body-container">
 <div class="command-line">
 				<div class="hostname">
-					[<span class="user">root</span>@<span class="host">kalebklein.com</span> <span class="where">~</span>]: #
+					[<span class="user">root</span><span class="at">@</span><span class="host">kalebklein.com</span> <span class="where">~</span>]: #
 				</div>
 				<div class="command">ls -l</div>
 			</div>
 <div class="command-line">
 				<div class="hostname">
-					[<span class="user">root</span>@<span class="host">kalebklein.com</span> <span class="where">~</span>]: #
+					[<span class="user">root</span><span class="at">@</span><span class="host">kalebklein.com</span> <span class="where">~</span>]: #
 				</div>
 				<div class="command">clear</div>
 			</div>
 <div class="command-line">
 				<div class="hostname">
-					[<span class="user">root</span>@<span class="host">kalebklein.com</span> <span class="where">~</span>]: #
+					[<span class="user">root</span><span class="at">@</span><span class="host">kalebklein.com</span> <span class="where">~</span>]: #
 				</div>
 				<div class="command">which sh</div>
 			</div>
@@ -169,6 +168,9 @@ Terminal Output:<br>
 <li>KParser</li>
 <li>Solarized</li>
 <li>Solarized Dark</li>
+<li>Coffee</li>
+<li>Monokai</li>
+<li>Predawn</li>
 <li>Bluebird</li>
 </ol>
 You can view the different themes supported by the Terminal widget by using the <a href="http://testsites.kalebklein.com/terminal/" target="_blank">KParser Terminal Style Tester Tool</a> <sup>[testsites.kalebklein.com]</sup></p>	<h1>Heading 1</h1>
